tests/ui/liveness/compound-assignment-read-issue-154457.stderr
error: variable `a` is assigned to, but never used
  --> $DIR/compound-assignment-read-issue-154457.rs:6:9
   |
LL |     let mut a = 10.;
   |         ^^^^^
   |
   = note: consider using `_a` instead
note: the lint level is defined here
  --> $DIR/compound-assignment-read-issue-154457.rs:2:9
   |
LL | #![deny(unused_variables)]
   |         ^^^^^^^^^^^^^^^^

error: value assigned to `a` is never read
  --> $DIR/compound-assignment-read-issue-154457.rs:12:5
   |
LL |     a -= c;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?
note: the lint level is defined here
  --> $DIR/compound-assignment-read-issue-154457.rs:1:9
   |
LL | #![deny(unused_assignments)]
   |         ^^^^^^^^^^^^^^^^^^

error: variable `a` is assigned to, but never used
  --> $DIR/compound-assignment-read-issue-154457.rs:17:9
   |
LL |     let mut a;
   |         ^^^^^
   |
   = note: consider using `_a` instead

error: value assigned to `a` is never read
  --> $DIR/compound-assignment-read-issue-154457.rs:21:5
   |
LL |     a += 1;
   |     ^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: value assigned to `a` is never read
  --> $DIR/compound-assignment-read-issue-154457.rs:46:5
   |
LL |     a += 1.0;
   |     ^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: aborting due to 5 previous errors

